feat: refactored revoking assignments to match grant pattern
